--- a/app/globals.css
+++ b/app/globals.css
@@ -15,8 +15,6 @@
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -24,4 +22,9 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.icon-medium {
+  font-size: 1.2rem;
+  line-height: 1.2rem;
 }
